# local-senseVoice

./: README.md  SenseVoiceServer.py  main.py  pyproject.toml
docs/: ADR-001.md  SPEC-001.md  SPEC-002.md  SPEC-003.md  SPEC-004.md
examples/: demo_clean_tags.py
src/: main.py
src/adapters/: text.py
src/api/: routes.py
src/core/: engine.py
src/services/: transcription.py
tests/e2e/: test_full_flow.py
tests/integration/: test_api.py
tests/reliability/: test_concurrency.py
tests/unit/: test_adapters.py  test_engine.py  test_service.py
