[project]
name = "local-sensevoice"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.121.3",
    "funasr[llm]>=1.2.7",
    "python-multipart>=0.0.20",
    "torch>=2.9.1",
    "torchaudio>=2.9.1",
    "uvicorn>=0.38.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.1",
    "pytest-asyncio>=1.3.0",
]
